opam-version: "1.2"
name: "tjr_fs_shared"
version: "0.0.1" # version should match a VERSION file in this dir?

# ----------------------------------------------------------------------

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"

# ----------------------------------------------------------------------

depends: [ "tjr_lib" ]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
