opam-version: "2.0"
name: "tjr_fs_shared"
version: "0.0.1"

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_fs_shared"
bug-reports: "https://github.com/tomjridge/tjr_fs_shared/issues"


# ----------------------------------------------------------------------

depends: [ 
  "tjr_lib" 
  "tjr_monad"
  "tjr_polymap"
]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
