(library
  (name tjr_fs_shared)
  (public_name tjr_fs_shared)

  (preprocessor_deps (file "config.ml"))
  (preprocess (pps ppx_deriving_yojson ppx_jane))

  ; -27 is unused var, -39 is unused rec flag
  (flags (:standard -w -26-27-39 -open Tjr_monad))


  ; we include monad so we don't have to explicitly depend on it in
  ; later packages
  (libraries 
    bin_prot ppx_bin_prot yojson ppx_deriving_yojson 
    tjr_monad tjr_profile
    lwt lwt.unix ;; for lwt blockdev
    lru
    ke ;; for functional queues
    alcotest ;; for testing
    bigstring ;; buffers
    logs ;; logging
))

(include_subdirs unqualified)
